--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -39,13 +39,17 @@ const sections = [
     <div class="grid grid-cols-2 lg:grid-cols-4 items-start gap-x-8 gap-y-24">
       <a
         href="/"
-        class="xl:col-span-1 text-black inline-flex items-center gap-3"
+        class="xl:col-span-1 text-black inline-flex items-center gap-1"
       >
         <img
-          src="/images/product-genie-logo.png"
+          src="/images/magic_lamp.svg"
           alt="ProductGenie Logo"
-          class="h-12 w-auto"
+          class="h-15 w-auto"
         />
+        <div class="flex flex-col leading-none">
+          <span class="text-black text-xl font-medium">Product</span>
+          <span class="text-[#9d74ed] text-xl font-medium -mt-2">Genie</span>
+        </div>
       </a>
       <div
         class="md:grid md:grid-cols-2 xl:grid-cols-4 md:gap-8 text-sm leading-normal text-base-500 font-medium lg:col-span-3"
