--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -39,16 +39,16 @@ const sections = [
     <div class="grid grid-cols-2 lg:grid-cols-4 items-start gap-x-8 gap-y-24">
       <a
         href="/"
-        class="xl:col-span-1 text-black inline-flex items-center gap-1"
+        class="xl:col-span-1 text-black inline-flex items-center gap-2"
       >
         <img
           src="/images/magic_lamp.svg"
           alt="ProductGenie Logo"
-          class="h-15 w-auto"
+          class="h-12 w-auto"
         />
-        <div class="flex flex-col leading-none">
-          <span class="text-black text-xl font-medium">Product</span>
-          <span class="text-[#9d74ed] text-xl font-medium -mt-2">Genie</span>
+        <div class="flex flex-col items-start text-left leading-none">
+          <span class="text-black text-2xl font-bold tracking-tight">Product</span>
+          <span class="text-[#9d74ed] text-2l font-bold tracking-tight -mt-2">Genie</span>
         </div>
       </a>
       <div
