--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -5,15 +5,15 @@
       class="relative flex flex-col w-full py-3 mx-auto bg-white md:items-center md:justify-between md:flex-row md:px-6"
     >
       <div class="flex flex-row items-center justify-between lg:justify-start">
-        <a href="/" class="text-black inline-flex items-center gap-1">
+        <a href="/" class="text-black inline-flex items-center gap-2">
           <img
             src="/images/magic_lamp.svg"
             alt="ProductGenie Logo"
-            class="h-15 w-auto"
+            class="h-12 w-auto"
           />
-          <div class="flex flex-col leading-none">
-            <span class="text-black text-xl font-medium">Product</span>
-            <span class="text-[#9d74ed] text-xl font-medium -mt-2">Genie</span>
+          <div class="flex flex-col items-start text-left leading-none">
+            <span class="text-black text-2xl font-bold tracking-tight">Product</span>
+            <span class="text-[#9d74ed] text-2xl font-bold tracking-tight -mt-2">Genie</span>
           </div>
         </a>
         <button
