changed color scheme to match logo color 9d74ed

--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -51,13 +51,13 @@ const featuresList = [
       >
         <a
           href="#pricing"
-          class="flex items-center justify-center transition-all duration-200 text-white hover:text-white bg-accent-500 hover:bg-accent-600 h-[30px] px-4 text-xs font-medium rounded-full"
+          class="flex items-center justify-center transition-all duration-200 text-accent-800 border border-accent-800 hover:bg-accent-800 hover:text-white h-[30px] px-4 text-xs font-medium rounded-full"
         >
           Get Started Free
         </a>
         <a
           href="https://demostore24.uk/product/aquaveil-moisturizer/"
-          class="flex items-center justify-center transition-all duration-200 text-base-700 hover:text-base-800 bg-base-200 hover:bg-base-300 h-[30px] px-4 text-xs font-medium rounded-full"
+          class="flex items-center justify-center transition-all duration-200 text-white bg-accent-800 hover:bg-accent-700 h-[30px] px-4 text-xs font-medium rounded-full"
         >
           See Demo
         </a>
@@ -66,15 +66,15 @@ const featuresList = [
         class="text-2xl leading-tight tracking-tight sm:text-3xl md:text-4xl lg:text-5xl xl:text-6xl font-semibold text-base-900"
       >
         Add an <span
-          class="bg-gradient-to-r from-blue-500 via-blue-600 to-blue-800 text-transparent bg-clip-text font-bold"
+          class="bg-gradient-to-r from-accent-500 via-accent-600 to-accent-800 text-transparent bg-clip-text font-bold"
           >AI Shopping Assistant</span
         > to Every <span
-          class="bg-gradient-to-r from-blue-500 via-blue-600 to-blue-800 text-transparent bg-clip-text font-bold"
+          class="bg-gradient-to-r from-accent-500 via-accent-600 to-accent-800 text-transparent bg-clip-text font-bold"
           >Product Page</span
         >
       </h2>
       <div
-        class="h-1 w-24 mx-auto mt-6 rounded-full bg-gradient-to-r from-blue-500/40 via-blue-600/40 to-blue-800/40"
+        class="h-1 w-24 mx-auto mt-6 rounded-full bg-gradient-to-r from-accent-500/40 via-accent-600/40 to-accent-800/40"
       >
       </div>
       <div
