--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,10 +13,10 @@
   --color-accent-200: #afdfff;
   --color-accent-300: #78ceff;
   --color-accent-400: #38b1ff;
-  --color-accent-500: #0b8aff;
-  --color-accent-600: #0065ff;
-  --color-accent-700: #004cff;
-  --color-accent-800: #003dd4;
+  --color-accent-500: #b085f5;
+  --color-accent-600: #8c5ce4;
+  --color-accent-700: #7b46d9;
+  --color-accent-800: #4f25ac;
   --color-accent-900: #02379e;
   --color-accent-950: #072364;
   /* Base */
